src/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_Goals__c</fullName>
        <label>Account Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Account_Sales__c = 0 , 1,   (  Plan_FY_Account_Sales_Goal__c  - Last_FY_Account_Sales__c  ) /  Last_FY_Account_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>R00N60000001PRP8EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Business_Problems__c</fullName>
        <label>Key Business Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Client_Sponsor__c</fullName>
        <label>Key Client Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>R00N60000001PRPAEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_FY_Account_Sales__c</fullName>
        <formula>Last_FY_Product_Sales__c  +  Last_FY_Services_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last FY Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services_Sales__c</fullName>
        <label>Last FY Services Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Account_Sales_Goal__c</fullName>
        <formula>Plan_FY_Product_Sales_Goal__c  +  Plan_FY_Services_Sales_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan FY Account Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Services_Sales_Goal__c</fullName>
        <label>Plan FY Services Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Barriers__c</fullName>
        <label>Potential Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Services_Sales__c = 0 , 1, (  Plan_FY_Services_Sales_Goal__c  -  Last_FY_Services_Sales__c  )  /  Last_FY_Services_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strengths_to_Leverage__c</fullName>
        <label>Strengths to Leverage</label>
        <type>TextArea</type>
    </fields>
    <label>Acct Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Acct Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acct Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>